# capstone

./: .gitignore  ARCHITECTURAL_ALIGNMENT_AND_DEPTH_REVIEW.md  LICENSE  Makefile  README.md  SUBSYSTEM_AUDIT.md
backend/: .env.example  .gitignore  API_ENDPOINTS.md  DATABASE_CONNECTION.md  DATABASE_SCHEMA_CHANGES.md  README.md  alembic.ini  pyproject.toml  pytest_output.txt  pytest_output2.txt  pytest_output3.txt  render_predeploy.sh  requirements.txt  reviewer_output.txt  reviewer_output_1600.txt  reviewer_output_blind.txt  reviewer_output_calibrated.txt  reviewer_output_consistency.txt  reviewer_output_visible.txt
backend/evaluation/: panel_comparison.txt  panel_comparison_report.json  validation_model_outputs.txt
backend/src/: app.py
backend/src/adapters/: __init__.py  audio_tone_adapter.py
backend/src/config/: __init__.py  logging.py  settings.py
backend/src/controllers/: __init__.py  admin_controller.py  analytics_controller.py  auth_controller.py  cases_controller.py  research_controller.py  sessions_controller.py  turns_controller.py  ws_controller.py
backend/src/core/: __init__.py  deps.py  errors.py  events.py  plugin_manager.py  security.py  time.py
backend/src/db/: __init__.py  base.py  types.py
backend/src/domain/: __init__.py
backend/src/interfaces/: evaluator.py  metrics.py  patient_model.py
backend/src/plugins/: load_plugins.py  registry.py
backend/src/repositories/: __init__.py  case_repo.py  feedback_repo.py  session_repo.py  turn_repo.py  user_repo.py
backend/src/schemas/: llm_reviewer.py
backend/src/scripts/: cleanup_expired_audio.py  compare_seeded_evaluators_to_external_panel.py  debug_test_conversation.py  demo_seed_mapping.json  evaluate_seeded_detectors.py  evaluate_seeded_fixtures.py  reset_and_seed.py  seed.py  seed_demo_sessions.py
backend/src/services/: __init__.py  analytics_service.py  audio_cache_service.py  audio_cleanup_service.py  auth_service.py  case_service.py  demo_transcript_replayer.py  dialogue_service.py  dialogue_state.py  hybrid_v2_llm_service.py  llm_reviewer_compare.py  llm_reviewer_prompt.py  llm_reviewer_prompt_v2.py  llm_reviewer_service.py  nlu_pipeline.py  patient_prompt_builder.py  patient_voice_profile.py  research_service.py  scoring_service.py  session_service.py  stage_tracker.py  trainee_analytics_service.py  turn_analysis.py
backend/src/tests/: conftest.py  test_auth.py  test_cases_api_smoke.py  test_conversation_fixture.py  test_llm_reviewer_compare.py  test_llm_reviewer_integration_phase1.py  test_llm_reviewer_prompt.py  test_llm_reviewer_service.py  test_rule_based_detector_edge_cases.py  test_sessions.py  test_sessions_audio.py  test_transcript_scoring_seeded.py  test_turn_analysis.py
backend/tests/: test_spikes_stage_update.py  test_stage_tracker.py
backend/tests/adapters/: test_storage_adapter_factory.py  test_whisper_adapter.py
backend/tests/admin/: test_plugins_endpoint.py
backend/tests/api/: test_analytics_api.py  test_auth.py  test_cases.py  test_cases_api_smoke.py  test_cases_vv.py  test_dialogue.py  (+3 more)
(+244 files in other folders)
